# world-heritage

./: .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  DATA_PIPELINE.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  test-hook.ts
.husky/: pre-push
app/: globals.css  layout.tsx  page.tsx
app/[locale]/: globals.css  layout.tsx  page.tsx
components/auth/: LoginButton.tsx  LoginPromptModal.tsx  UserMenu.tsx
components/explore/: ExploreSidebar.tsx
components/games/: GeoGameMap.tsx  HotColdGameMap.tsx
components/heritage/: ComponentList.tsx  ComponentMap.tsx  ComponentVisitsPanel.tsx  PropertyCard.tsx  ShareActions.tsx  SiteActionButtons.tsx  VisitProgress.tsx
components/map/: ComponentMap.tsx  HeritageMap.tsx  SiteMiniMap.tsx
config/: map.config.ts
data/: whc-en.xml  whc-zh.xml
data/processed/: wdpa-mapping.json
docs/: FEATURES_USER_SITES.md  PHASE1-SUMMARY.md  TODO-MULTI-COMPONENTS.md  TODO.md  development.md  map-architecture.md  multi-components.md
docs/architecture/: multi-components.md
docs/design/: component-ux-prototype.html
lib/contexts/: UserSitesContext.tsx
lib/data/: countries.ts  sites.ts  types.ts
lib/design/: site-status-colors.ts
lib/games/: geo-utils.ts  hotcold-utils.ts  types.ts
lib/hooks/: useComponentProgress.ts
lib/i18n/: config.ts  hooks.ts  types.ts
lib/maps/: types.ts
lib/services/: components.ts  (+1 more)
public/: sites.json
scripts/: prepare-data.ts
supabase/: README.md  config.toml
types/: index.ts
(+22 files in other folders)
