[project]
name = "world-heritage-data"
version = "0.1.0"
description = "Data processing pipeline for UNESCO World Heritage Sites"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
